Keep Gradle 7.6 as minimum supported plugin version
- Pin the documented minimum Gradle version in the documentation
- Guard deprecated configuration visibility on Gradle versions below 9,
  where it still prevents attaching model/source zips to assemble (#4)
- Add compatibility tests for Gradle 7.6 and 8.14 with assemble guards
- Add a JDK 17 CI job to keep the compatibility tests executable